--- a/prologin/gcc/templates/gcc/ressources.html
+++ b/prologin/gcc/templates/gcc/ressources.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	<!-- Intro -->
-	<section id="intro" class="wrapper style1">
+	<section id="intro" class="wrapper important">
 		<div class="title">S'entraîner à coder</div>
 
 		<div class="row">
@@ -17,7 +17,7 @@
 	</section>
 
 	<!-- Main -->
-	<section id="main" class="wrapper style2">
+	<section id="main" class="wrapper">
 		<div class="title">Quel langage ?</div>
 		<div class="container">
 			<div class="row">
@@ -36,7 +36,7 @@
 		</div>
 	</section>
 
-	<section id="main" class="wrapper style3">
+	<section id="main" class="wrapper">
 		<div class="title">Commencer</div>
 
 		<div class="container">
@@ -80,7 +80,7 @@
 	</section>
 
 	<!-- Highlights -->
-	<section id="highlights" class="wrapper style2">
+	<section id="highlights" class="wrapper">
 		<div class="title">Se lancer</div>
 		<div class="container">
 			<div class="row">
