--- a/prologin/gcc/templates/gcc/ressources.html
+++ b/prologin/gcc/templates/gcc/ressources.html
@@ -2,10 +2,8 @@
 {% load static %}
 
 {% block content %}
-	<!-- Intro -->
-	<section id="intro" class="wrapper important">
+	<section class="wrapper important">
 		<div class="title">S'entraîner à coder</div>
-
 		<div class="row">
 			<div class="off-2-large col-8-large off-1 col-10 off-1-medium col-10-medium off-0-small col-12-small">
 				<p class="style2" style="font-size: 1.5em; padding: 20px; font-weight: normal;">
@@ -16,8 +14,7 @@
 		</div>
 	</section>
 
-	<!-- Main -->
-	<section id="main" class="wrapper">
+	<section class="wrapper">
 		<div class="title">Quel langage ?</div>
 		<div class="container">
 			<div class="row">
@@ -36,7 +33,7 @@
 		</div>
 	</section>
 
-	<section id="main" class="wrapper">
+	<section class="wrapper">
 		<div class="title">Commencer</div>
 
 		<div class="container">
@@ -79,8 +76,7 @@
 		</div>
 	</section>
 
-	<!-- Highlights -->
-	<section id="highlights" class="wrapper">
+	<section class="wrapper">
 		<div class="title">Se lancer</div>
 		<div class="container">
 			<div class="row">
