gcc: revert to fontawesome 4.7, remove local version added with the template

--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -40,14 +40,14 @@
 				</header>
 				<div class="feature-list">
 					<section>
-						<i class="fa fa-graduation-cap" aria-hidden="true"></i>
+						<h3 class="icon fa-graduation-cap" aria-hidden="true">Prérequis</h3>
 						<p>
 							Le stage a pour but de s’adapter au niveau de chacune donc pas besoin d’avoir un niveau minimum en informatique avant le stage.
 							Par contre, c’est toujours mieux de savoir dans quoi on se lance donc va faire un tour sur <a href="{% url 'gcc:ressources' %}">les ressources</a> que nous recommandons pour commencer !
 						</p>
 					</section>
 					<section>
-						<h3 class="icon fa-euro-sign">Stage gratuit</h3>
+						<h3 class="icon fa-euro">Stage gratuit</h3>
 						<p>
 							Les stages sont gratuits et les repas offerts aux participantes.
 							L'hébergement et le transport jusqu'au lieu du stage ne sont pas pris en charge par l’association.
@@ -55,7 +55,7 @@
 						</p>
 					</section>
 					<section>
-						<h3 class="icon fa-frown">Pour celles qui ne peuvent plus participer</h3>
+						<h3 class="icon fa-frown-o">Pour celles qui ne peuvent plus participer</h3>
 						<p>
 							L’informatique ne t’es pas fermé pour autant !
 							N’hésite pas à découvrir les <ref>ressources recommandées pour débuter<ref> et si tu as moins de 21 ans, tu peux participer à la 27<sup>e</sup> édition <a href="{% url 'home' %}">du concours Prologin</a>.
