--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -12,7 +12,7 @@
 		<title>{% block title %}Girls Can Code!{% endblock %}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/font-awesome.min.css' %}" />
+		<link rel="stylesheet" href="{% static 'lib/css/font-awesome.min.css' %}" />
 		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/grid.css' %}" />
 		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/main.css' %}" />
 		<link rel="stylesheet" href="{% static 'gcc/escape-velocity/css/layout.css' %}" />
@@ -20,101 +20,98 @@
 		{% block head %}{% endblock %}
 	</head>
 	<body>
-		<div id="page-wrapper">
-			<!-- Header -->
-				<section id="header" class="wrapper" style="background: url({% static 'gcc/img/collage_index_blur.jpg' %})">
+		<!-- Header -->
+		<section id="header" class="wrapper" style="background: url({% static 'gcc/img/collage_index_blur.jpg' %})">
+			<!-- Logo -->
+			<div class="logo">
+				<h1>
+					<a href="{% url 'gcc:index' %}">
+						<img src="{% static "img/logo-squeletton.png" %}"/>
+						Girls Can Code!
+					</a>
+				</h1>
+				<p>Stage d'informatique gratuit pour les filles de collège et lycée.</p>
+			</div>
 
-					<!-- Logo -->
-					<div class="logo">
-						<h1>
-							<a href="{% url 'gcc:index' %}">
-								<img src="{% static "img/logo-squeletton.png" %}"/>
-								Girls Can Code!
-							</a>
-						</h1>
-						<p>Stage d'informatique gratuit pour les filles de collège et lycée.</p>
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li>
+					<a href="{% url 'gcc:index' %}">Accueil</a>
+				</li>
+				<li class="{% active '^/gcc/ressources/' %}">
+					<a href="{% url 'gcc:ressources' %}">Ressources</a>
+				</li>
+				<li class="{% active '^/gcc/editions/' %}">
+					<a href="{% url 'gcc:editions' %}">Éditions</a>
+					<ul>
+						{% with years="2018 2017 2016 2015 2014" %}
+							{% for year in years.split %}
+								<li><a href="{% url 'gcc:editions' year=year %}">Édition {{year}}</a></li>
+							{% endfor %}
+						{% endwith %}
+					</ul>
+				</li>
+			</ul>
+		</nav>
+	</section>
+
+
+		{% block content %}<section><p>CONTENU NON DÉFINIS</p></section>{% endblock %}
+
+		<!-- Footer -->
+		<section id="footer" class="wrapper">
+			{% block footer %}{% endblock %}
+
+			<div class="container">
+				<div class="title">Contact</div>
+				<section class="feature-list small">
+					<div class="row">
+						<section class="col-6 col-12-small">
+							<h3 class="icon fa-home">Adresse</h3>
+							<p>
+								Association Prologin<br />
+								14-15 Rue Voltaire<br />
+								94270 Le Kremlin Bicêtre
+							</p>
+						</section>
+						<section class="col-6 col-12-small">
+							<h3 class="icon fa-comment">Social</h3>
+							<p>
+								<a style="font-size: 1.4em; margin-right: 5px;" href="https://www.facebook.com/stagegirlscancode"><i class="icon fa-facebook" style=""></i></a>
+								<a style="font-size: 1.4em; margin-right: 5px;" href="https://twitter.com/prologin"><i class="icon fa-twitter" style=""></i></a>
+								<a style="font-size: 1.4em; margin-right: 5px;" href="https://www.flickr.com/photos/prologin"><i class="icon fa-flickr" style=""></i></a>
+							</p>
+						</section>
+						<section class="col-6 col-12-small">
+							<h3 class="icon fa-envelope">Email</h3>
+							<p>
+								<a href="mailto:info@prologin.org">info@prologin.org</a>
+							</p>
+						</section>
+						<section class="col-6 col-12-small">
+							<h3 class="icon fa-phone">Téléphone</h3>
+							<p>
+								+331 44 08 01 90
+							</p>
+						</section>
 					</div>
-
-					<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li>
-								<a href="{% url 'gcc:index' %}">Accueil</a>
-							</li>
-							<li class="{% active '^/gcc/ressources/' %}">
-								<a href="{% url 'gcc:ressources' %}">Ressources</a>
-							</li>
-							<li class="{% active '^/gcc/editions/' %}">
-								<a href="{% url 'gcc:editions' %}">Éditions</a>
-								<ul>
-									{% with years="2018 2017 2016 2015 2014" %}
-										{% for year in years.split %}
-											<li><a href="{% url 'gcc:editions' year=year %}">Édition {{year}}</a></li>
-										{% endfor %}
-									{% endwith %}
-								</ul>
-							</li>
-						</ul>
-					</nav>
-
 				</section>
-
-
-			{% block content %}<section><p>CONTENU NON DÉFINIS</p></section>{% endblock %}
-
-			<!-- Footer -->
-			<section id="footer" class="wrapper">
-				{% block footer %}{% endblock %}
-
-				<div class="container">
-					<div class="title">Contact</div>
-					<section class="feature-list small">
-						<div class="row">
-							<section class="col-6 col-12-small">
-								<h3 class="icon fa-home">Adresse</h3>
-								<p>
-									Association Prologin<br />
-									14-15 Rue Voltaire<br />
-									94270 Le Kremlin Bicêtre
-								</p>
-							</section>
-							<section class="col-6 col-12-small">
-								<h3 class="icon fa-comment">Social</h3>
-								<p>
-									<a style="font-size: 1.4em; margin-right: 5px;" href="https://www.facebook.com/stagegirlscancode"><i class="icon fa-facebook" style=""></i></a>
-									<a style="font-size: 1.4em; margin-right: 5px;" href="https://twitter.com/prologin"><i class="icon fa-twitter" style=""></i></a>
-									<a style="font-size: 1.4em; margin-right: 5px;" href="https://www.flickr.com/photos/prologin"><i class="icon fa-flickr" style=""></i></a>
-								</p>
-							</section>
-							<section class="col-6 col-12-small">
-								<h3 class="icon fa-envelope">Email</h3>
-								<p>
-									<a href="mailto:info@prologin.org">info@prologin.org</a>
-								</p>
-							</section>
-							<section class="col-6 col-12-small">
-								<h3 class="icon fa-phone">Téléphone</h3>
-								<p>
-									+331 44 08 01 90
-								</p>
-							</section>
-						</div>
-					</section>
-					<div id="copyright">
-						<ul>
-							<li>&copy; Girls Can Code!</li>
-							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
+				<div id="copyright">
+					<ul>
+						<li>&copy; Girls Can Code!</li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
 				</div>
-			</section>
+			</div>
+		</section>
 
-			<!-- Scripts -->
-			<script src="{% static 'gcc/escape-velocity/js/jquery.min.js' %}"></script>
-			<script src="{% static 'gcc/escape-velocity/js/jquery.dropotron.min.js' %}"></script>
-			<script src="{% static 'gcc/escape-velocity/js/browser.min.js' %}"></script>
-			<script src="{% static 'gcc/escape-velocity/js/breakpoints.min.js' %}"></script>
-			<script src="{% static 'gcc/escape-velocity/js/util.js' %}"></script>
-			<script src="{% static 'gcc/escape-velocity/js/main.js' %}"></script>
+		<!-- Scripts -->
+		<script src="{% static 'gcc/escape-velocity/js/jquery.min.js' %}"></script>
+		<script src="{% static 'gcc/escape-velocity/js/jquery.dropotron.min.js' %}"></script>
+		<script src="{% static 'gcc/escape-velocity/js/browser.min.js' %}"></script>
+		<script src="{% static 'gcc/escape-velocity/js/breakpoints.min.js' %}"></script>
+		<script src="{% static 'gcc/escape-velocity/js/util.js' %}"></script>
+		<script src="{% static 'gcc/escape-velocity/js/main.js' %}"></script>
 	</body>
 </html>
