prologin: replace v5 fa-icon by v4 version

--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -6,7 +6,7 @@
     <h3>{% trans "Prologin" %}</h3>
     <ul class="nav">
       <li><a href="{% url 'pages:about-organization' %}"><i class="fa fa-cube fa-centered"></i> {% trans "The organization" %}</a></li>
-      <li><a href="{% url 'pages:about-contribute' %}"><i class="fa fa-hands-helping fa-centered"></i> {% trans "Contribute" %}</a></li>
+      <li><a href="{% url 'pages:about-contribute' %}"><i class="fa fa-handshake-o fa-centered"></i> {% trans "Contribute" %}</a></li>
       <li><a href="{% url 'pages:about-organization' %}#contact"><i class="fa fa-envelope fa-centered"></i> {% trans "Contact us" %}</a></li>
 	  <li><a href="{% url 'pages:about-contest-rules' %}"><i class="fa fa-gavel
 				  fa-centered"></i> {% trans "Contest rules" %}</a></li>
